--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -19,7 +19,13 @@
 //<BUTTONS (a.btn+tab)>====================================================================================================
 .btn {
 	display: inline-flex;
-	padding: 0px 0px;
+	padding: 0px 40px;
+	height: 50px;
+	justify-content:center;
+	align-items: center;
+	border-radius: 0px 18px 0px 0px;
+	font-weight: bold;
+	font-size: 17px;
 	@media (min-width: 992px) {
 		&:hover {
 		}
@@ -27,6 +33,17 @@
 	&._fw {
 		width: 100%;
 	}
+	@media (max-width: 380px){
+		  padding: 0px 20px;
+	}
+}
+.btn-orange {
+	background: #FFAC12;
+	color: #000;
+}
+.btn-black {
+	background-color: #000;
+	color: #fff;
 }
 //</BUTTONS>====================================================================================================
 
