--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -1,3 +1,48 @@
 //====================================================================================================
+.page {
 
+	&__promo {
+		padding: 200px 0px 0px 0px;
+	}
+}
 //====================================================================================================
+
+.promo-page {
+	background: url('../img/BG1.jpg') center center / cover no-repeat;
+
+
+		&__content {
+		}
+
+		&__text {
+			max-width: 510px;
+		}
+
+		&__title {
+			font-weight: bold;
+			font-size: 80px;
+			line-height: 80px;
+			color: #fff;
+			margin: 0px 0px 20px 0px;
+		}
+
+		&__descr {
+			font-size: 20px;
+			line-height: 140%;
+			letter-spacing: -0.502564px;
+			color: #ffffff60;
+			margin: 0px 0px 175px 0px;
+		}
+
+		&__see {
+			display: flex;
+			align-items: center;
+			padding: 0px 40px;
+			height: 100px;
+			width: 100%;
+			background-color: #fff;
+			font-weight: bold;
+			font-size: 20px;
+			color: #000000;
+		}
+}
